--- a/iconGdm.html
+++ b/iconGdm.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gloria的海報生成器</title>
-    <link rel="icon" type="image/png" href="https://storage.googleapis.com/maker-me-space-os-us/v1/b498f828-090c-4328-9f5b-9a7428f52288/web-app-manifest-512x512.png">
+    <!-- Favicon Links -->
+    <link rel="icon" type="image/png" sizes="96x96" href="https://storage.googleapis.com/maker-me-space-os-us/v1/d6a3b2b4-e42a-4375-9e67-0c7f8a9e6b4e/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://storage.googleapis.com/maker-me-space-os-us/v1/a3e12c14-7221-4f1b-a536-476779a59b6c/web-app-manifest-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://storage.googleapis.com/maker-me-space-os-us/v1/b498f828-090c-4328-9f5b-9a7428f52288/web-app-manifest-512x512.png">
+    <link rel="apple-touch-icon" href="https://storage.googleapis.com/maker-me-space-os-us/v1/59a68a68-6a31-41d5-9856-42d488d57545/apple-touch-icon.png">
     <!-- 引入 Tailwind CSS 和 Google Fonts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -437,4 +441,3 @@
     </script>
 </body>
 </html>
-
