--- a/iconGdm.html
+++ b/iconGdm.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gloria的海報生成器</title>
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- Favicon Links -->
     <link rel="icon" type="image/png" sizes="96x96" href="https://storage.googleapis.com/maker-me-space-os-us/v1/d6a3b2b4-e42a-4375-9e67-0c7f8a9e6b4e/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="192x192" href="https://storage.googleapis.com/maker-me-space-os-us/v1/a3e12c14-7221-4f1b-a536-476779a59b6c/web-app-manifest-192x192.png">
